--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -105,7 +105,7 @@
               <script th:inline="javascript">
                 jQuery.validator.addMethod("usernamePattern", function(value, element) {
                   // Regular expression for user name: Min. 3 characters, max. 50 characters
-                  const regexUsername = /^[a-zA-Z0-9][a-zA-Z0-9@._+-]{1,48}[a-zA-Z0-9]$/;
+                  const regexUsername = /^[a-zA-Z0-9](?!.*\.\.)([a-zA-Z0-9@._+-]{1,48})[a-zA-Z0-9]$/;
 
                   // Regular expression for email addresses: Max. 320 characters, with RFC-like validation
                   const regexEmail = /^(?=.{1,320}$)(?=.{1,64}@)[A-Za-z0-9](?:[A-Za-z0-9_.+-]*[A-Za-z0-9])?@[^-][A-Za-z0-9-]+(?:\.[A-Za-z0-9-]+)*(?:\.[A-Za-z]{2,})$/;
